# music-library-app

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/models/: Album.h  Artist.h  Playlist.h  Song.h
